<resources>
    <string name="app_name">Settings Tester App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mp3 Music Player</string>
    <string name="nav_header_subtitle">3.0</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Player</string>
    <string name="menu_gallery">Settings</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="pauseButton">Pause</string>
    <string name="playButton">Play</string>
    <string name="nextButton">Next</string>
    <string name="backButton">Back</string>
    <string name="shuffleButton">Shuffle"</string>
    <string name="song">Song: </string>
    <string name="artist">Artist: </string>
    <string name="artist_name"></string>
    <string name="song_name"></string>
    <string name="volume">Volume</string>
    <string name="visible">Visible Playlists</string>
    <string name="hidden_text">Show Hidden Playlists</string>
    <string name="sleep">Sleep: Off</string>
    <string name="merged">Merged Playlists</string>
    <string name="merged_text">Show Merged Playlists</string>
    <string name="add">Add</string>

</resources>