<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/bground"
    tools:context=".ui.gallery.GalleryFragment">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:id="@+id/linearlayout"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:text="@string/action_settings"
            android:textSize="35sp">
        </TextView>

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="40sp"
            android:textSize="18sp"
            android:text="@string/sleep"
            android:id="@+id/sleepText">
        </TextView>

        <Spinner
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:id="@+id/sleep">
        </Spinner>

        <Switch
            android:id="@+id/hidden"
            android:layout_width="271dp"
            android:layout_height="69dp"
            android:layout_marginTop="30dp"
            android:text="@string/hidden_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/hidden_playlists"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:text="@string/visible"
            android:textSize="20sp">
        </TextView>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/hidden_playlists"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hidden">
        </androidx.gridlayout.widget.GridLayout>

        <Switch
            android:id="@+id/merged"
            android:layout_width="271dp"
            android:layout_height="69dp"
            android:layout_marginTop="30dp"
            android:text="@string/merged_text"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/hidden_playlists"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="UseSwitchCompatOrMaterialXml">
        </Switch>

        <Button
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:onClick="deleteMerged"
            android:text="Delete Merged Playlists">
        </Button>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="34dp"
            android:layout_marginTop="20dp"
            android:text="@string/merged"
            android:textSize="20sp">
        </TextView>

        <androidx.gridlayout.widget.GridLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:visibility="invisible"
            android:id="@+id/mergeNamer">
            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:inputType="none"
                android:textSize="15sp"
                android:id="@+id/showText"
                app:layout_column="0"
                app:layout_row="0"
                app:layout_gravity="center">
            </EditText>

            <Button
                android:layout_width="60sp"
                android:layout_height="40sp"
                android:id="@+id/add"
                android:text="@string/add"
                android:onClick="addMergedPlayList"
                app:layout_gravity="center">
            </Button>
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content">
            <Spinner
                android:layout_height="wrap_content"
                android:layout_width="200sp"
                android:id="@+id/mergedSelector"
                android:layout_marginTop="20sp"
                android:layout_marginBottom="20sp"
                app:layout_column="0"
                app:layout_row="0">
            </Spinner>

            <Button
                android:layout_width="36dp"
                android:layout_height="27dp"
                android:background="@android:drawable/ic_input_add"
                android:gravity="center"
                android:onClick="showMergePlayListEditor"
                app:layout_column="1"
                app:layout_row="0"></Button>

        </androidx.gridlayout.widget.GridLayout>


        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/merged_playlists"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hidden">

        </androidx.gridlayout.widget.GridLayout>


    </LinearLayout>
</ScrollView>