<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:id="@+id/viewer"
    android:background="@color/bground"
    tools:showIn="@layout/app_bar_main"
    tools:ignore="MissingConstraints">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/linearlayout"
        android:gravity="center">

        <Spinner
            android:id="@+id/playlistSelector"
            android:layout_width="221dp"
            android:layout_height="48dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="70dp"
            app:layout_constraintBottom_toTopOf="@+id/playButton"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="SpeakableTextPresentCheck" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/gridLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="visible"
            app:columnCount="3"
            app:rowCount="3"
            android:bottomRightRadius="50dp"
            android:bottomLeftRadius="50dp"
            android:topRightRadius="50dp"
            android:topLeftRadius="50dp"
            android:background="@drawable/rounded_corners"
            tools:visibility="visible">

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/playButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="15dp"
                android:onClick="play"
                android:text="@string/playButton"
                app:layout_column="1"
                app:layout_constraintBottom_toTopOf="@+id/shuffleButton"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_gravity="center"
                app:layout_row="0"
                app:srcCompat="@android:drawable/ic_media_play" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/shuffleButton"
                android:layout_width="107dp"
                android:layout_height="50dp"
                android:onClick="shuffle"
                android:text="@string/shuffleButton"
                app:layout_column="1"
                app:layout_constraintBottom_toTopOf="@+id/pauseButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_gravity="center"
                app:layout_row="1" />

            <ImageButton
                android:id="@+id/nextButton"
                android:layout_width="90dp"
                android:layout_height="50dp"
                android:onClick="next"
                android:layout_marginLeft="10dp"
                android:text="@string/nextButton"
                android:src="@android:drawable/ic_media_next"
                app:layout_column="2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_gravity="left|top"
                app:layout_row="1" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/pauseButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="pause"
                android:text="@string/pauseButton"
                android:src="@android:drawable/ic_media_pause"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="15dp"
                app:layout_column="1"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_gravity="center"
                app:layout_row="2" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="88dp"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:onClick="back"
                android:text="@string/backButton"
                android:src="@android:drawable/ic_media_previous"
                app:layout_column="0"
                app:layout_constraintBottom_toTopOf="@+id/song"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_gravity="left|top"
                app:layout_row="1" />
        </androidx.gridlayout.widget.GridLayout>

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/dsplayInfo"
            android:layout_width="350dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:clipChildren="true"
            android:paddingLeft="10dp"
            app:columnCount="2"
            app:rowCount="1"
            tools:visibility="visible">

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/infoLabels"
                android:layout_width="74dp"
                android:layout_height="match_parent"
                android:clipChildren="true"
                app:columnCount="1"
                app:layout_column="0"
                app:rowCount="2"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/song"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/bground"
                    android:ems="10"
                    android:text="@string/song"
                    android:textSize="22sp"
                    app:layout_column="0"
                    app:layout_constraintBottom_toTopOf="@+id/artist"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_row="0" />

                <TextView
                    android:id="@+id/artist"
                    android:layout_width="70dp"
                    android:layout_height="30dp"
                    android:layout_marginRight="20dp"
                    android:background="@color/bground"
                    android:ems="10"
                    android:maxLines="1"
                    android:text="@string/artist"
                    android:textSize="22sp"
                    app:layout_column="0"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_row="1" />

            </androidx.gridlayout.widget.GridLayout>

            <androidx.gridlayout.widget.GridLayout
                android:id="@+id/infoText"
                android:layout_width="250dp"
                android:layout_height="69dp"
                android:clipChildren="true"

                app:columnCount="1"
                app:layout_column="1"
                app:rowCount="2"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/artistText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artist_name"
                    android:textSize="22sp"
                    android:maxLines="1"
                    app:layout_column="0"
                    app:layout_constraintStart_toEndOf="@+id/artist"
                    app:layout_constraintTop_toBottomOf="@+id/songText"
                    app:layout_row="1" />

                <TextView
                    android:id="@+id/songText"
                    android:layout_width="wrap_content"
                    android:layout_height="29dp"
                    android:maxLines="1"
                    android:text="@string/song_name"
                    android:textSize="22sp"
                    app:layout_column="0"
                    app:layout_constraintStart_toEndOf="@+id/song"
                    app:layout_constraintTop_toBottomOf="@+id/pauseButton"
                    app:layout_row="0" />
            </androidx.gridlayout.widget.GridLayout>

        </androidx.gridlayout.widget.GridLayout>

        <SeekBar
            android:id="@+id/timeBar"
            android:layout_width="266dp"
            android:layout_height="51dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/timeInfo"
            android:layout_width="320dp"
            android:layout_height="57dp"
            android:visibility="visible"
            android:layout_marginBottom="60sp"
            app:columnCount="2"
            app:rowCount="1"
            tools:visibility="visible">

            <TextView
                android:id="@+id/currentPosition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_column="0"
                app:layout_row="0"
                android:layout_marginRight="90dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/duration"
                android:layout_marginLeft="90dp"
                app:layout_column="1"
                app:layout_row="0"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.gridlayout.widget.GridLayout>

        <SeekBar
            android:id="@+id/volumeBar"
            android:layout_width="172dp"
            android:layout_height="32dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/volumeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="70dp"
            android:text="@string/volume"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.gridlayout.widget.GridLayout
            android:id="@+id/playlists"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.gridlayout.widget.GridLayout>

    </LinearLayout>
</ScrollView>